[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/images/characters/player.png" type="Texture" id=1]
[ext_resource path="res://characters/player/PlayerStateMachine.gd" type="Script" id=2]
[ext_resource path="res://characters/player/Idle.gd" type="Script" id=3]
[ext_resource path="res://characters/player/Run.gd" type="Script" id=4]
[ext_resource path="res://characters/player/Jump.gd" type="Script" id=5]
[ext_resource path="res://characters/player/Crouch.gd" type="Script" id=6]
[ext_resource path="res://characters/player/CrouchRun.gd" type="Script" id=7]
[ext_resource path="res://characters/player/Player.gd" type="Script" id=8]
[ext_resource path="res://characters/player/Fall.gd" type="Script" id=9]
[ext_resource path="res://characters/player/WindUp.gd" type="Script" id=10]
[ext_resource path="res://characters/player/Throw.gd" type="Script" id=11]
[ext_resource path="res://objects/Aimer.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 7 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 4, 5 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 5, 10 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "crouch"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "setIsCrouched"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "crouch_run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "setIsCrouched"
} ]
}

[sub_resource type="Animation" id=12]
resource_name = "crouch_throw"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 22 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "setIsCrouched"
} ]
}

[sub_resource type="Animation" id=13]
resource_name = "crouch_wind_up"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "setIsCrouched"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "setIsCrouched"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "jump_down"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 13, 14 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "setIsCrouched"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "jump_up"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 11, 12 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "setIsCrouched"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "setIsCrouched"
} ]
}

[sub_resource type="Animation" id=10]
resource_name = "throw"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "setIsCrouched"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "wind_up"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "setIsCrouched"
} ]
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 16
script = ExtResource( 8 )

[node name="Aimer" parent="." instance=ExtResource( 12 )]
visible = false
position = Vector2( 0, -8 )

[node name="StandHeldItem" type="Position2D" parent="." groups=["player_held_item_pos"]]
visible = false
position = Vector2( -3, -8 )

[node name="CrouchHeldItem" type="Position2D" parent="." groups=["player_held_item_pos"]]
visible = false
position = Vector2( -3, -5 )

[node name="WindUpHeldItem" type="Position2D" parent="." groups=["player_held_item_pos"]]
visible = false
position = Vector2( -8, -6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -12 )
texture = ExtResource( 1 )
hframes = 23

[node name="StandCollision" type="CollisionShape2D" parent="." groups=["player_collision"]]
position = Vector2( 0, -7 )
shape = SubResource( 1 )

[node name="CrouchCollision" type="CollisionShape2D" parent="." groups=["player_collision"]]
position = Vector2( 0, -5 )
shape = SubResource( 11 )

[node name="SightDetect" type="Area2D" parent="."]
visible = false
collision_layer = 128
collision_mask = 0

[node name="CrouchCollisionShape" type="CollisionShape2D" parent="SightDetect"]
position = Vector2( 0, -10 )
shape = SubResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 2 )
anims/crouch = SubResource( 7 )
anims/crouch_run = SubResource( 8 )
anims/crouch_throw = SubResource( 12 )
anims/crouch_wind_up = SubResource( 13 )
anims/idle = SubResource( 3 )
anims/jump_down = SubResource( 5 )
anims/jump_up = SubResource( 6 )
anims/run = SubResource( 4 )
anims/throw = SubResource( 10 )
anims/wind_up = SubResource( 9 )

[node name="PlayerStateMachine" type="Node2D" parent="."]
script = ExtResource( 2 )
animationPlayerPath = NodePath("../AnimationPlayer")
spritePath = NodePath("../Sprite")
heldItemPositionPath = NodePath("../StandHeldItem")

[node name="Idle" type="Node2D" parent="PlayerStateMachine"]
script = ExtResource( 3 )
colliderPath = NodePath("../../StandCollision")
heldItemPosPath = NodePath("../../StandHeldItem")

[node name="Run" type="Node2D" parent="PlayerStateMachine"]
script = ExtResource( 4 )
colliderPath = NodePath("../../StandCollision")
heldItemPosPath = NodePath("../../StandHeldItem")

[node name="Jump" type="Node2D" parent="PlayerStateMachine"]
script = ExtResource( 5 )
colliderPath = NodePath("../../StandCollision")
heldItemPosPath = NodePath("../../StandHeldItem")

[node name="Fall" type="Node2D" parent="PlayerStateMachine"]
script = ExtResource( 9 )
colliderPath = NodePath("../../StandCollision")
heldItemPosPath = NodePath("../../StandHeldItem")

[node name="Crouch" type="Node2D" parent="PlayerStateMachine"]
script = ExtResource( 6 )
colliderPath = NodePath("../../CrouchCollision")
heldItemPosPath = NodePath("../../CrouchHeldItem")

[node name="StandDetectMiddle" type="RayCast2D" parent="PlayerStateMachine/Crouch"]
enabled = true
cast_to = Vector2( 0, -12 )
collision_mask = 48

[node name="StandDetectRight" type="RayCast2D" parent="PlayerStateMachine/Crouch"]
position = Vector2( 3, 0 )
enabled = true
cast_to = Vector2( 0, -12 )
collision_mask = 48

[node name="StandDetectLeft" type="RayCast2D" parent="PlayerStateMachine/Crouch"]
position = Vector2( -3, 0 )
enabled = true
cast_to = Vector2( 0, -12 )
collision_mask = 48

[node name="CrouchRun" type="Node2D" parent="PlayerStateMachine"]
script = ExtResource( 7 )
colliderPath = NodePath("../../CrouchCollision")
heldItemPosPath = NodePath("../../CrouchHeldItem")

[node name="StandDetectMiddle" type="RayCast2D" parent="PlayerStateMachine/CrouchRun"]
visible = false
enabled = true
cast_to = Vector2( 0, -12 )
collision_mask = 48

[node name="StandDetectRight" type="RayCast2D" parent="PlayerStateMachine/CrouchRun"]
visible = false
position = Vector2( 3, 0 )
enabled = true
cast_to = Vector2( 0, -12 )
collision_mask = 48

[node name="StandDetectLeft" type="RayCast2D" parent="PlayerStateMachine/CrouchRun"]
visible = false
position = Vector2( -3, 0 )
enabled = true
cast_to = Vector2( 0, -12 )
collision_mask = 48

[node name="WindUp" type="Node2D" parent="PlayerStateMachine"]
script = ExtResource( 10 )
colliderPath = NodePath("../../StandCollision")
heldItemPosPath = NodePath("../../WindUpHeldItem")
aimerPath = NodePath("../../Aimer")

[node name="Timer" type="Timer" parent="PlayerStateMachine/WindUp"]
wait_time = 0.75
one_shot = true

[node name="Throw" type="Node2D" parent="PlayerStateMachine"]
script = ExtResource( 11 )
colliderPath = NodePath("../../StandCollision")
heldItemPosPath = NodePath("../../WindUpHeldItem")

[node name="Timer" type="Timer" parent="PlayerStateMachine/Throw"]
wait_time = 0.25
one_shot = true

[connection signal="timeout" from="PlayerStateMachine/Throw/Timer" to="PlayerStateMachine/Throw" method="_on_Timer_timeout"]
